# VexEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  code.ps1  vcpkg.json
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/: Logger.h  Timer.h  Window.h
Engine/Core/include/OpenGL/: IndexBuffer.h  OpenGLExtensions.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Engine/Core/include/Platform/: Platform.h
Engine/Core/include/Platform/OpenGL/: OpenGL.h  Shader.h
Engine/Core/public/: Core.h
Engine/Core/public/Vex/: Core.h  Libs.h  Minimal.h  OpenGL.h
Engine/Core/public/Vex/Platform/: OpenGL.h
Engine/Core/src/: Logger.cpp  Timer.cpp  Window.cpp
Engine/Core/src/OpenGL/: IndexBuffer.cpp  OpenGL.cpp  OpenGLExtensions.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Engine/Core/src/Platoform/: Platform.cpp
Engine/Core/src/Platoform/OpenGL/: IndexBuffer.cpp  OpenGL.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/include/: Camera.h  GLContext.h  VexRenderer.h
Engine/Renderer/public/Vex/: Renderer.h
Engine/Renderer/src/: Camera.cpp  GLContext.cpp  VexRenderer.cpp
Engine/Resource/: CMakeLists.txt
Engine/Resource/include/: Mesh.h  Shader.h  Texture.h
Engine/Resource/public/Vex/: Resource.h
Engine/Resource/src/: Mesh.cpp  Shader.cpp  Texture.cpp
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/include/: Game.h  VexEngine.h
Engine/Runtime/public/: Runtime.h
Engine/Runtime/public/Vex/: Vex.h
Engine/Runtime/src/: VexEngine.cpp
Engine/Shader/: CMakeLists.txt
Engine/Shader/include/: ShaderCompiler.h
Engine/Shader/public/Vex/: Shader.h
Engine/Shader/src/: ShaderCompiler.cpp
Game/ModelViewer/: CMakeLists.txt
Game/ModelViewer/assets/Shaders/: default.glsl  default.shader
Game/ModelViewer/include/: CameraController.h  ModelViewer.h  Primitives.h  Vertex.h
Game/ModelViewer/include/Core/: Core.h  Data.h  Vertex.h
Game/ModelViewer/src/: CameraController.cpp  ModelViewer.cpp  Primitives.cpp  main.cpp
Game/ModelViewer/src/Core/: Data.cpp  Primitives.cpp
